Review: fix review-container width same with review-wrap

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -3342,6 +3342,10 @@ label.issue-item-row {
         min-height:30px;
         top:0; right:0;
 
+        .review-container {
+            width:260px;
+        }
+
         &.fixed {
             .review-container {
                 position:fixed;
